syntax = "proto3";

option java_multiple_files = true;
package rs.ac.uns.ftn.grpc;

// isAvailable
message ProtoAvailableMedication {
  string medicationName = 1;
  string pharmacyName = 2;
}

message ProtoResponseAvailableMedication {
  int32 amount = 1;
}

// getMedications
message ProtoMedications {
  string pharmacyName = 1;
}

message ProtoMedication{
  string name = 1;
  int32 amount = 2;
}

message ProtoResponseMedications{
  repeated ProtoMedication medication = 1;
}


