syntax = "proto3";

option java_multiple_files = true;
package rs.ac.uns.ftn.grpc;
import "model.proto";

service SpringGrpcService {
  rpc communicate (ProtoAvailableMedication) returns (ProtoResponseAvailableMedication);
  rpc communicateMedications (ProtoMedications) returns (ProtoResponseMedications);
}